# test-istio-circuit-breaker

./: .gitignore  Dockerfile  README.md  go.mod  main.go
deploy/: caller.yaml  gateway.yaml  httpbin.yaml  wasm.yaml
wasm-envoy-filter/: Cargo.toml  Dockerfile
wasm-envoy-filter/src/: lib.rs
wasm-envoy-filter/src/config/: mod.rs
