[package]
publish = false
name = "wasm-envoy-filter"
version = "0.1.0"
authors = ["Dengwu Wang <me@dengwu.wang>"]
description = "Proxy-Wasm plugin: Test Envoy Filter"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "wasm_envoy_filter"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"